# vnpy_uft

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
script/: run.py
vnpy_uft/: __init__.py
vnpy_uft/api/: __init__.py  uft_constant.py  vnuftmd.pyd  vnufttd.pyd
vnpy_uft/api/generator/: generate_api_functions.py  generate_data_type.py  generate_struct.py  uft_constant.py  uft_md_header_define.h  uft_md_header_function.h  uft_md_header_on.h  uft_md_header_process.h  uft_md_source_function.cpp  uft_md_source_module.cpp  uft_md_source_on.cpp  uft_md_source_process.cpp  uft_md_source_switch.cpp  uft_md_source_task.cpp  uft_struct.py  uft_td_header_define.h  uft_td_header_function.h  uft_td_header_on.h  uft_td_header_process.h  uft_td_source_function.cpp  uft_td_source_module.cpp  uft_td_source_on.cpp  uft_td_source_process.cpp  uft_td_source_switch.cpp  uft_td_source_task.cpp  uft_typedef.py
vnpy_uft/api/include/uft/: HSDataType.h  HSError.xml  HSMdApi.h  HSSMCertApi.h  HSStruct.h  HSTradeApi.h  HsFutuSystemInfo.h
vnpy_uft/api/libs/: HSMdApi.lib  HSTradeApi.lib  HsFutuSystemInfo.lib  ldpfastprotocol.lib  ldptcpsdk.lib  t2sdk.lib
vnpy_uft/api/vnuft/: vnuft.h
vnpy_uft/api/vnuft/vnuftmd/: vnuftmd.cpp  vnuftmd.h  vnuftmd.vcxproj
vnpy_uft/api/vnuft/vnufttd/: vnufttd.cpp  vnufttd.h  vnufttd.vcxproj
vnpy_uft/gateway/: __init__.py  uft_gateway.py
